# shopify-monitor-rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: checker.rs  discord.rs  main.rs  shopify.rs  utils.rs  webhook.rs
