[package]
name = "shopify-monitor-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sunner"]
publish = false
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
dotenvy = "0.15.7"
