[package]
name = "shopify-monitor-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sunner"]
publish = false
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
dotenvy = "0.15"
futures = "0.3"
croner = "2.0"
chrono = "0.4"
derive_builder = "0.20"
